modification index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#" alt ="" id="accueil">Accueil</a></li>
                 <li><a href="apropos.html" alt ="">A propos</a></li>
                 <li><a href="produit.html" alt ="">Produits</a></li>
-                <li><a class="btnLogin-popup" title="Login" href="/Login (3)/Login/login.html" >Se connecter</a></li>
+                <li><a class="btnLogin-popup" title="Login" href="login.html" >Se connecter</a></li>
             </ul>
         </nav>
     </header>
