--- a/panier.html
+++ b/panier.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-
+<main>
 
         <div class="header">
           <p class="logo">Nos produits</p>
@@ -61,6 +61,7 @@
           <li><a href="">4</a></li>
           <li><a href="">Suivant</a></li>
           </ul>
+    </main>
         
           <!-- footer -->
 <footer><img src="" alt="">  
