--- a/panier.html
+++ b/panier.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="SRC/panier.css">
+    <link rel="stylesheet" href="panier.css">
     <title>Panier</title>
 </head>
   
@@ -19,7 +19,7 @@
                 <li class="agri">Agrilink</li>
             </ul>
             <ul class="list_de_droite">
-                <li id="accueil"><a href="accueil.html">Accueil</a></li>
+                <li id="accueil"><a href="index.html">Accueil</a></li>
                 <li><a href="produit.html" target="_blank">Nos produits</a></li>
                 
                 <li id="connexion"><a href="index.html">Connexion</a></li></ul>
