--- a/panier.html
+++ b/panier.html
@@ -93,7 +93,7 @@
 
 </div>
 
-<div class="info"> 
+<div class="info-footer"> 
 <div class="footer-section">
   <!-- <h3>paiement avec </h3> -->
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEelSThIvlkqYJsFcIIkJpOxTkXF1R6Nj9qQ&s" alt="Wave" class="payment-logo">
